# Jobpin-Agent

./: .gitignore  .gitmodules  CLAUDE.md  README.md  TEXTBOOK_SPEC.md  index.html  netlify.toml
agent/: .env.example  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
agent/examples/: README.md  __init__.py  chat.py  demo_turn.py  hiring_slice_demo.py  memory_agent_demo.py  memory_inspect.py  orchestration_demo.py  recall_demo.py
agent/src/: README.md
agent/src/jobpin_agent/: README.md  __init__.py
agent/tests/: README.md  test_agent_loop.py  test_benchmark.py  test_candidate_provider.py  test_composite_provider.py  test_compression.py  test_compression_loop.py  test_config.py  test_delegation.py  test_demo.py  test_embedding.py  test_fake_provider.py  test_hiring_slice.py  test_hooks.py  test_memory_agent_demo.py  test_memory_fence.py  test_memory_inspect.py  test_memory_manager.py  test_memory_manager_hooks.py  test_memory_provider.py  test_memory_store.py  test_openai_provider.py  test_orchestration_demo.py  test_recall_demo.py  test_reembed.py  test_semantic_provider.py  test_session_store.py  test_smoke.py  test_structured_store.py  test_system_prompt.py  test_tools.py  test_tracing.py  test_vector_store.py
agent/tests/data/: README.md  __init__.py  system_prompt_golden.txt  test_audit.py  test_store.py
agent/tests/data_model/: README.md  test_audit.py  test_migrations.py  test_schema.py  test_store.py
agent/tests/governance/: README.md  __init__.py  test_audit.py  test_bias_hygiene.py  test_erasure.py  test_governance_end_to_end.py  (+6 more)
(+181 files in other folders)
