[project]
name = "jobpin-agent"
version = "0.0.0"
description = "Jobpin Agent — local-first, AI-agent HR platform"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobpin_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
